crates/schemalint/tests/snapshots/snapshot_tests__emit_human_edge_cases.snap
---
source: crates/schemalint/tests/snapshot_tests/part_02.rs
expression: output
---
error[TST-SPECIAL]: message with special chars: 
 tab	 backslash\ and unicode 你好
   --> special.json:10:5
     |
     = profile: test
     = schema path: /special
     = hint: hint: with : colons and % percent
     = see: https://1nder-labs.github.io/schemalint/rules

warning[TST-EMPTY]: 
   --> special.json
     |
     = profile: test
     = schema path: (root)
     = see: https://1nder-labs.github.io/schemalint/rules

error[TST-LONG]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   --> special.json
     |
     = profile: test
     = schema path: /long
     = see: https://1nder-labs.github.io/schemalint/rules

3 issues found (2 errors, 1 warning) across 1 schema
