crates/schemalint/tests/snapshots/snapshot_tests__emit_human_empty.snap
---
source: crates/schemalint/tests/snapshot_tests.rs
expression: output
---
0 issues found (0 errors, 0 warnings) across 0 schemas in 42ms
