crates/schemalint/tests/snapshots/snapshot_tests__emit_human_empty_per_file.snap
---
source: crates/schemalint/tests/snapshot_tests.rs
expression: output
---
0 issues found (0 errors, 0 warnings) across 1 schema
