crates/schemalint/tests/snapshots/snapshot_tests__emit_human_multi_diag.snap
---
source: crates/schemalint/tests/snapshot_tests/part_01.rs
expression: output
---
error[OAI-K-allOf]: keyword 'allOf' is not supported
   --> schema.json:42:8
     |
     = profile: openai.so
     = schema path: /allOf
     = hint: remove allOf
     = see: https://1nder-labs.github.io/schemalint/rules/keyword/allOf

error[OAI-K-anyOf]: keyword 'anyOf' is not supported
   --> schema.json
     |
     = profile: openai.so
     = schema path: /anyOf
     = see: https://1nder-labs.github.io/schemalint/rules/keyword/anyOf

warning[OAI-K-uniqueItems]: keyword 'uniqueItems' is discouraged
   --> schema.json:15
     |
     = profile: openai.so
     = schema path: /properties/items
     = see: https://1nder-labs.github.io/schemalint/rules/keyword/uniqueItems

3 issues found (2 errors, 1 warning) across 1 schema in 123ms
