crates/schemalint/tests/snapshots/snapshot_tests__emit_junit_empty_global.snap
---
source: crates/schemalint/tests/snapshot_tests.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<testsuites>
</testsuites>
