crates/schemalint/tests/snapshots/snapshot_tests__emit_junit_empty_per_file.snap
---
source: crates/schemalint/tests/snapshot_tests.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<testsuites>
  <testsuite name="clean.json" tests="1" failures="0" skipped="0" errors="0" time="0">
    <testcase name="clean.json" classname="schemalint" time="0"/>
  </testsuite>
</testsuites>
